--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "chart.js": "^3.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-graph-vis": "^1.0.6",
     "react-scripts": "5.0.1",
-    "recharts": "^2.1.13",
     "styled-components": "^5.3.5",
     "title": "^3.5.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +39,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://nsuman.github.io/SanzalWeb/",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,5 +55,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
