--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-graph-vis": "^1.0.6",
     "react-scripts": "5.0.1",
+    "react-vis-graph-wrapper": "^0.1.3",
     "styled-components": "^5.3.5",
     "title": "^3.5.2",
     "uuidv4": "^6.2.13",
